--- a/app/src/main/res/layout/action_bar_layout.xml
+++ b/app/src/main/res/layout/action_bar_layout.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="32dp"
         android:gravity="center"
-        android:text="Homeeeeeee"
+        android:text="Home"
         android:textColor="#ffffff"
         android:textSize="20sp" />
 
