--- a/app/src/main/res/layout/fragment_meal.xml
+++ b/app/src/main/res/layout/fragment_meal.xml
@@ -1,6 +1,404 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</LinearLayout>
+    <LinearLayout
+        android:background="@color/colorWhite"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:orientation="vertical"
+        android:weightSum="1">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="36dp"
+            android:background="@color/colorGray2"
+            android:gravity="center_vertical">
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="24dp"
+                android:layout_weight="0.5"
+                android:src="@drawable/back_left" />
+
+            <TextView
+                android:id="@+id/tv_date"
+
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:gravity="center"
+
+
+                android:textColor="@color/colorGreen"
+                android:textSize="20sp" />
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="24dp"
+                android:layout_weight="0.5"
+                android:src="@drawable/back_right" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="36dp"
+            android:paddingTop="10dp"
+            android:gravity="center_vertical">
+
+            <ImageView
+                android:id="@+id/iv_breakfast"
+                android:layout_width="0dp"
+                android:layout_height="32dp"
+                android:layout_weight="0.25"
+                android:src="@drawable/breakfast" />
+
+            <TextView
+                android:id="@+id/tv_breakfast"
+
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Breakfast"
+
+                android:textColor="@color/colorBalck"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/tv_total_breakfast"
+
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+
+
+                android:textColor="@color/colorBalck"
+                android:textSize="20sp" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:gravity="center_vertical"
+            android:layout_width="match_parent"
+            android:layout_height="36dp"
+            android:background="@color/colorGray"
+            android:paddingTop="10dp">
+
+            <ImageView
+                android:id="@+id/iv_lunch"
+                android:layout_width="0dp"
+                android:layout_height="32dp"
+                android:layout_weight="0.25"
+                android:src="@drawable/lunch" />
+
+            <TextView
+                android:id="@+id/tv_lunch"
+
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Lunch"
+                android:textColor="@color/colorBalck"
+
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/tv_total_lunch"
+
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+
+
+                android:textColor="@color/colorBalck"
+                android:textSize="20sp" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:gravity="center_vertical"
+
+            android:layout_width="match_parent"
+            android:layout_height="36dp"
+            android:paddingTop="10dp">
+
+            <ImageView
+                android:id="@+id/iv_dinner"
+                android:layout_width="0dp"
+                android:layout_height="32dp"
+                android:layout_weight="0.25"
+                android:src="@drawable/dinner" />
+
+            <TextView
+                android:id="@+id/tv_dinner"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Dinner"
+                android:textColor="@color/colorBalck"
+
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/tv_total_dinner"
+
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+
+
+                android:textColor="@color/colorBalck"
+                android:textSize="20sp" />
+
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:gravity="center_vertical"
+            android:layout_width="match_parent"
+            android:layout_height="36dp"
+            android:background="@color/colorGray"
+            android:paddingTop="10dp">
+
+            <ImageView
+                android:id="@+id/iv_snack"
+                android:layout_width="0dp"
+                android:layout_height="32dp"
+                android:layout_weight="0.25"
+                android:src="@drawable/snack" />
+
+            <TextView
+                android:id="@+id/tv_snack"
+
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Snack"
+                android:textColor="@color/colorBalck"
+
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/tv_total_snack"
+
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+
+
+                android:textColor="@color/colorBalck"
+                android:textSize="20sp" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="32dp"
+            android:gravity="center_vertical"
+            android:paddingTop="10dp">
+
+            <ImageView
+                android:id="@+id/iv_list_food"
+                android:layout_width="0dp"
+                android:layout_height="32dp"
+                android:layout_weight="0.25"
+                android:src="@drawable/snack" />
+
+            <TextView
+                android:id="@+id/tv_list_food"
+
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Listfood"
+                android:textColor="@color/colorBalck"
+
+                android:textSize="20sp" />
+
+            <TextView
+
+
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+
+
+                android:textColor="@color/colorBalck"
+                android:textSize="20sp" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_marginTop="10dp"
+            android:layout_width="387dp"
+            android:layout_height="78dp"
+            android:background="@color/colorGray3"
+            android:paddingLeft="20dp"
+            android:gravity="bottom"
+            android:paddingBottom="5dp"
+            android:layout_weight="0.08">
+
+            <TextView
+                android:textStyle="bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="DAY FOOD TOTALS : "
+                android:textColor="@color/colorOre"
+                android:textSize="18sp" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="28dp"
+            android:orientation="horizontal"
+            android:paddingLeft="16dp"
+            android:paddingTop="5dp">
+
+            <TextView
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Calories : "
+                android:textColor="@color/colorBalck"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/tv_calories"
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+
+                android:textColor="@color/colorBalck"
+                android:textSize="16sp" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="28dp"
+            android:background="@color/colorGray"
+
+            android:paddingLeft="16dp"
+            android:paddingTop="5dp">
+
+            <TextView
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Protein   :  "
+                android:textColor="@color/colorBalck"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/tv_protein"
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+
+                android:textColor="@color/colorBalck"
+                android:textSize="16sp" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="28dp"
+
+            android:paddingLeft="16dp"
+            android:paddingTop="5dp">
+
+            <TextView
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Carbs     : "
+                android:textColor="@color/colorBalck"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/tv_cab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:textColor="@color/colorBalck"
+                android:textSize="16sp" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="28dp"
+            android:background="@color/colorGray"
+
+            android:paddingLeft="16dp"
+            android:paddingTop="5dp">
+
+            <TextView
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Fat          : "
+                android:textColor="@color/colorBalck"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/tv_fat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:textColor="@color/colorBalck"
+                android:textSize="16sp" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="28dp"
+            android:background="@color/colorWhite"
+
+            android:paddingLeft="16dp"
+            android:paddingTop="5dp">
+
+            <TextView
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Sugars   : "
+                android:textColor="@color/colorBalck"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/tv_sugars"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:textColor="@color/colorBalck"
+                android:textSize="16sp" />
+
+
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+
+</RelativeLayout>
