--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,6 @@
     <color name="colorGrayText">#666666</color>
     <color name="colorBalck">#000000</color>
     <color name="colorOre">#ff7733</color>
+    <color name="textDark">#3b3b3b</color>
 
 </resources>
