--- a/app/src/main/res/layout/fragment_listfood.xml
+++ b/app/src/main/res/layout/fragment_listfood.xml
@@ -34,7 +34,9 @@
     </RelativeLayout>
 
     <RelativeLayout
-        android:visibility="visible"
+        android:visibility="invisible"
+        android:id="@+id/relayout_add_food"
+
 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -44,14 +46,15 @@
         android:layout_alignParentStart="true">
 
         <LinearLayout
-            android:layout_width="300dp"
+            android:layout_width="330dp"
 
             android:layout_height="300dp"
             android:background="@drawable/rounded_layout"
             android:orientation="vertical"
             android:paddingLeft="10dp"
             android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true">
+            android:layout_centerHorizontal="true"
+            android:weightSum="1">
 
             <LinearLayout
 
@@ -78,12 +81,13 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
 
+
                         android:textColor="@color/colorBalck"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/tv_number_food_list_detail"
+                        android:id="@+id/tv_number_calo_food"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
 
@@ -96,28 +100,53 @@
             </LinearLayout>
 
             <LinearLayout
-                android:gravity="center_vertical"
+                android:layout_width="301dp"
 
-                android:layout_width="250dp"
-                android:layout_height="48dp"
+                android:layout_height="64dp"
                 android:layout_marginTop="20dp"
+                android:layout_weight="0.43"
+                android:gravity="center_vertical"
                 android:paddingLeft="25dp">
 
-                <EditText
-                    android:id="@+id/et_number_food"
-                    android:layout_width="48dp"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/edittext_line"
+                <LinearLayout
+                    android:layout_width="89dp"
 
-                    android:textSize="14sp" />
+                    android:layout_height="72dp"
+                    android:gravity="center_vertical">
+
+                    <ImageView
+                        android:id="@+id/iv_plus"
+                        android:layout_width="56dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:src="@drawable/plu" />
+
+                    <TextView
+                        android:id="@+id/tv_number_food"
+                        android:layout_width="56dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="1"
+                        android:textColor="@color/colorBalck"
+                        android:textSize="16sp" />
+
+                    <ImageView
+                        android:id="@+id/iv_sub"
+                        android:layout_width="56dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:src="@drawable/sub" />
+                </LinearLayout>
+
 
                 <TextView
                     android:id="@+id/tv_don_vi_food"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
-                    android:textSize="16sp"
-                    android:textColor="@color/colorBalck" />
+                    android:textColor="@color/colorBalck"
+                    android:textSize="16sp" />
 
                 <TextView
 
@@ -148,7 +177,7 @@
                     android:textColor="@color/colorBalck" />
 
                 <Spinner
-                    android:id="@+id/spin_meat"
+                    android:id="@+id/spin_meal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
 
