--- a/app/src/main/res/layout/fragment_meal.xml
+++ b/app/src/main/res/layout/fragment_meal.xml
@@ -20,6 +20,7 @@
             android:gravity="center_vertical">
 
             <ImageView
+                android:id="@+id/iv_back_left"
                 android:layout_width="0dp"
                 android:layout_height="24dp"
                 android:layout_weight="0.5"
@@ -38,6 +39,7 @@
                 android:textSize="20sp" />
 
             <ImageView
+                android:id="@+id/iv_back_right"
                 android:layout_width="0dp"
                 android:layout_height="24dp"
                 android:layout_weight="0.5"
@@ -47,6 +49,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/layout_breakfast"
             android:layout_width="match_parent"
             android:layout_height="36dp"
             android:paddingTop="10dp"
@@ -85,6 +88,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/layout_lunch"
             android:gravity="center_vertical"
             android:layout_width="match_parent"
             android:layout_height="36dp"
@@ -124,6 +128,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/layout_dinner"
             android:gravity="center_vertical"
 
             android:layout_width="match_parent"
@@ -163,6 +168,7 @@
 
 
         <LinearLayout
+            android:id="@+id/layout_snack"
             android:gravity="center_vertical"
             android:layout_width="match_parent"
             android:layout_height="36dp"
@@ -202,17 +208,18 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/layout_listfood"
             android:layout_width="match_parent"
-            android:layout_height="32dp"
+            android:layout_height="36dp"
             android:gravity="center_vertical"
             android:paddingTop="10dp">
 
             <ImageView
                 android:id="@+id/iv_list_food"
                 android:layout_width="0dp"
-                android:layout_height="32dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="0.25"
-                android:src="@drawable/snack" />
+                android:src="@drawable/menu" />
 
             <TextView
                 android:id="@+id/tv_list_food"
@@ -370,32 +377,7 @@
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="28dp"
-            android:background="@color/colorWhite"
 
-            android:paddingLeft="16dp"
-            android:paddingTop="5dp">
-
-            <TextView
-
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Sugars   : "
-                android:textColor="@color/colorBalck"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/tv_sugars"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:textColor="@color/colorBalck"
-                android:textSize="16sp" />
-
-
-        </LinearLayout>
 
 
     </LinearLayout>
