--- a/app/src/main/res/layout/item_list_food.xml
+++ b/app/src/main/res/layout/item_list_food.xml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorWhite">
+    android:background="@color/colorWhite"
+    android:orientation="vertical">
 
 
     <LinearLayout
-
-
         android:layout_width="match_parent"
         android:layout_height="48dp"
-
         android:gravity="center_vertical">
 
         <ImageView
@@ -28,10 +25,8 @@
 
             <TextView
                 android:id="@+id/tv_name_food_list"
-
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
                 android:textColor="@color/colorBalck"
                 android:textSize="14sp" />
 
@@ -40,13 +35,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingTop="3dp"
-
                 android:textColor="#666666"
                 android:textSize="12sp" />
 
-
         </LinearLayout>
-
 
         <ImageView
             android:id="@+id/iv_detail_food"
@@ -54,7 +46,6 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
             android:src="@drawable/details_food" />
-
 
     </LinearLayout>
 
