--- a/app/src/main/res/layout/fragment_listfood.xml
+++ b/app/src/main/res/layout/fragment_listfood.xml
@@ -122,7 +122,7 @@
                         android:src="@drawable/plu" />
 
                     <TextView
-                        android:id="@+id/tv_number_food"
+                        android:id="@+id/tv_number_food_fragment"
                         android:layout_width="56dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
