--- a/app/src/main/res/layout/dialog_edit_food.xml
+++ b/app/src/main/res/layout/dialog_edit_food.xml
@@ -21,11 +21,11 @@
 
             android:layout_height="300dp"
 
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
             android:orientation="vertical"
             android:paddingLeft="10dp"
-            android:weightSum="1"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true">
+            android:weightSum="1">
 
             <LinearLayout
 
@@ -74,11 +74,11 @@
 
             <LinearLayout
                 android:layout_width="301dp"
-                android:background="@color/colorGray"
-
                 android:layout_height="64dp"
+
                 android:layout_marginTop="20dp"
                 android:layout_weight="0.43"
+                android:background="@color/colorGray"
                 android:gravity="center_vertical"
                 android:paddingLeft="25dp">
 
