--- a/app/src/main/res/layout/fragment_exercise.xml
+++ b/app/src/main/res/layout/fragment_exercise.xml
@@ -7,7 +7,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -18,6 +18,7 @@
 
 
             <LinearLayout
+                android:id="@+id/layout_abdominals"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="5dp">
@@ -39,6 +40,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/layout_back"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#eff5f5"
@@ -62,6 +64,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/layout_biceps"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="5dp">
@@ -83,6 +86,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/layout_triceps"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#eff5f5"
@@ -105,6 +109,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/layout_Chest"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="5dp">
@@ -126,6 +131,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/layout_shoulders"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#eff5f5"
@@ -148,6 +154,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/layout_legs"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="5dp">
