--- a/app/src/main/res/drawable-v21/edittext_line.xml
+++ b/app/src/main/res/drawable-v21/edittext_line.xml
@@ -7,9 +7,9 @@
     </item>
 
     <item
-        android:top="-2dp"
+        android:left="-2dp"
         android:right="-2dp"
-        android:left="-2dp">
+        android:top="-2dp">
         <shape>
             <solid android:color="@android:color/transparent" />
             <stroke
