--- a/app/src/main/res/layout/dialog_add_food.xml
+++ b/app/src/main/res/layout/dialog_add_food.xml
@@ -215,11 +215,11 @@
     </LinearLayout>
 
     <LinearLayout
-        android:paddingTop="5dp"
-
         android:layout_width="wrap_content"
+
         android:layout_height="wrap_content"
-        android:layout_gravity="center">
+        android:layout_gravity="center"
+        android:paddingTop="5dp">
 
         <Button
 
