--- a/app/src/main/res/layout/fragment_workout_exercise.xml
+++ b/app/src/main/res/layout/fragment_workout_exercise.xml
@@ -12,11 +12,24 @@
 
     </ListView>
 
+    <TextView
+        android:id="@+id/tv_workout_exercise_kalo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:textSize="16sp" />
+
     <ExpandableListView
         android:id="@+id/exListview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_above="@+id/tv_workout_exercise_kalo"
+        android:childDivider="#00000000"
+        android:divider="@color/colorPrimary"
+        android:dividerHeight="1dp"
+        android:groupIndicator="@null">
 
     </ExpandableListView>
+
 
 </RelativeLayout>
