--- a/app/src/main/res/layout/item_expandable_listview_header.xml
+++ b/app/src/main/res/layout/item_expandable_listview_header.xml
@@ -11,10 +11,23 @@
         android:layout_height="wrap_content"
         android:textSize="25sp" />
 
-    <ImageView
-        android:id="@+id/iv_expandable_list_detail"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:layout_alignParentRight="true"
-        android:src="@drawable/back_right" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true">
+
+        <CheckBox
+            android:id="@+id/cb_expandable_list_complete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:focusable="false" />
+
+        <ImageView
+            android:id="@+id/iv_expandable_list_detail"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:src="@drawable/back_right" />
+    </LinearLayout>
+
+
 </RelativeLayout>
