--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -47,7 +47,7 @@
                 android:layout_height="32dp"
                 android:layout_gravity="right|center_vertical"
                 android:layout_marginRight="10dp"
-                android:src="@drawable/plu"
+                android:src="@drawable/plus_1"
                 android:visibility="gone" />
 
             <android.support.v7.widget.SearchView
