--- a/app/src/main/res/layout/item_statistic.xml
+++ b/app/src/main/res/layout/item_statistic.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <?xml version="1.0" encoding="utf-8"?>
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/colorWhite"
@@ -22,10 +22,10 @@
                 android:paddingLeft="10dp">
 
                 <ImageView
-                    android:src="@drawable/excer"
                     android:layout_width="32dp"
                     android:layout_height="32dp"
                     android:layout_weight="0.25"
+                    android:src="@drawable/excer"
 
                     />
 
