--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -27,7 +27,7 @@
             android:layout_weight="1"
             android:button="@null"
             android:checked="true"
-            android:drawableTop="@drawable/home"
+            android:drawableTop="@drawable/menu_home"
             android:gravity="center"
             android:text="Home"
             android:textColor="#ffffff"
@@ -40,7 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:button="@null"
-            android:drawableTop="@drawable/list"
+            android:drawableTop="@drawable/menu_workout"
             android:gravity="center"
             android:text="Workouts"
             android:textColor="#ffffff"
@@ -53,7 +53,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:button="@null"
-            android:drawableTop="@drawable/meal"
+            android:drawableTop="@drawable/menu_meal"
             android:gravity="center"
             android:text="Meals"
             android:textColor="#ffffff"
@@ -66,7 +66,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:button="@null"
-            android:drawableTop="@drawable/exercise"
+            android:drawableTop="@drawable/menu_exercies"
             android:gravity="center"
             android:text="Exercise"
             android:textColor="#ffffff"
@@ -79,7 +79,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:button="@null"
-            android:drawableTop="@drawable/profile"
+            android:drawableTop="@drawable/menu_statistic"
             android:gravity="center"
             android:text="Profile"
             android:textColor="#ffffff"
