--- a/app/src/main/res/layout/item_expandable_listview_child.xml
+++ b/app/src/main/res/layout/item_expandable_listview_child.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+
     android:paddingLeft="20dp"
     android:paddingRight="20dp">
 
@@ -10,24 +11,43 @@
         android:id="@+id/tv_expandable_list_set"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/colorGray"
+        android:drawableLeft="@drawable/settings_1"
+        android:text="aaaaaaaaaaaaaa"
+        android:textColor="@color/colorBalck"
         android:textSize="18sp" />
 
     <TextView
+
         android:id="@+id/tv_expandable_list_quantity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:drawableLeft="@drawable/time"
+        android:paddingTop="5dp"
+        android:text="aaaaaaaaaaaaaaaaaaa"
+        android:textColor="@color/colorBalck"
         android:textSize="18sp" />
 
     <TextView
         android:id="@+id/tv_expandable_list_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/colorGray"
+        android:drawableLeft="@drawable/idea_24"
+        android:paddingTop="5dp"
+        android:text="aaaaaaaaaaaaaaa"
+        android:textColor="@color/colorBalck"
         android:textSize="18sp" />
 
     <TextView
+
         android:id="@+id/tv_expandable_list_kalo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:drawableLeft="@drawable/apple"
+        android:paddingTop="5dp"
+        android:text="a"
+        android:textColor="@color/colorBalck"
         android:textSize="18sp" />
 
 </LinearLayout>
