--- a/app/src/main/res/layout/item_expandable_listview_header.xml
+++ b/app/src/main/res/layout/item_expandable_listview_header.xml
@@ -5,10 +5,15 @@
     android:orientation="vertical"
     android:padding="10dp">
 
+
     <TextView
+
+        android:textStyle="bold"
+        android:textColor="@color/colorGreen"
         android:id="@+id/tv_expandable_list_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+
         android:textSize="25sp" />
 
     <LinearLayout
